src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>DDS_ScoredARR__c</fullName>
        <label>Scored ARR USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDS_StartingPriceText__c</fullName>
        <formula>TEXT(CurrencyIsoCode)&amp;&quot; &quot;&amp;
IF(
Starting_Price_Opp__c &gt;= 1000000,
TEXT(FLOOR(Starting_Price_Opp__c / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(
Starting_Price_Opp__c &gt;= 1000,
RIGHT(TEXT(FLOOR(Starting_Price_Opp__c / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Starting_Price_Opp__c)), 3) &amp; &quot;.&quot; &amp;
IF(
MOD(Starting_Price_Opp__c , 1) * 100 &lt; 10,
&quot;0&quot; &amp; TEXT(ROUND(MOD(Starting_Price_Opp__c , 1), 2) * 100),
TEXT(MIN(ROUND(MOD(Starting_Price_Opp__c , 1), 2) * 100, 99))
) + BR()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDS Starting Price Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DDS_StartingPriceUSD__c</fullName>
        <formula>DDS_StartingPrice__c  /CURRENCYRATE(TEXT( CurrencyIsoCode ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDS - Starting Price USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DDS_StartingPrice__c</fullName>
        <description>Staring filtered by no-lost opportunity products</description>
        <label>DDS Starting Price</label>
        <summarizedField>OpportunityLineItem.Starting_Price__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Lost_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DDS_TotalARR_USD__c</fullName>
        <formula>Total_ARR__c /CURRENCYRATE(TEXT( CurrencyIsoCode ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DDS - Total ARR USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Amount_Won__c</fullName>
        <formula>IF(
IsWon = TRUE,
Amount,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Close_Date_Extensions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of times the Close Date has been extended.</description>
        <inlineHelpText>Number of times the Close Date has been extended.</inlineHelpText>
        <label># Close Date Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Close_Date_Month_Extensions__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of times the Close Date has been extended from one month to another.</description>
        <inlineHelpText>Number of times the Close Date has been extended from one month to another month.</inlineHelpText>
        <label># Close Date Month Extensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Date_Opportunity_was_Closed__c</fullName>
        <description>Date the Opportunity was actually closed.</description>
        <inlineHelpText>Date the Stage was changed to Closed Won or Lost</inlineHelpText>
        <label>Date Opportunity was Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Days_Open_Delete__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Days OpenV1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Days_Open__c</fullName>
        <formula>IF(ISBLANK( DashboardsGSP__Date_Opportunity_was_Closed__c ),
NOW() - CreatedDate,
DashboardsGSP__Date_Opportunity_was_Closed__c - DATEVALUE(CreatedDate)
)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Includes the day the Opportunity was opened.</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Days_Since_Last_Stage_Change__c</fullName>
        <description>Number of days since the last change in Opportunity Stage.</description>
        <formula>IF(ISBLANK(DashboardsGSP__Date_Opportunity_was_Closed__c),
TODAY()-DashboardsGSP__Last_Stage_Change_Date__c,
DashboardsGSP__Date_Opportunity_was_Closed__c - DashboardsGSP__Last_Stage_Change_Date__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days since the Opportunity Stage was last changed.</inlineHelpText>
        <label>Days Since Last Stage Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DashboardsGSP__Last_Stage_Change_Date__c</fullName>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Moved_to_Closed_Lost__c</fullName>
        <label>Date Moved to Closed Lost</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Moved_to_Closed_Won__c</fullName>
        <label>Date Moved to Closed Won</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Moved_to_SS2__c</fullName>
        <description>Populated through Process Builder called &quot;Opportunity Updates&quot;</description>
        <label>Date Moved to SS2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Moved_to_SS3__c</fullName>
        <description>Populated through Process Builder called &quot;Opportunity Updates&quot;</description>
        <label>Date Moved to SS3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Moved_to_SS4__c</fullName>
        <label>Date Moved to SS4</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Stalled__c</fullName>
        <formula>TODAY() - Last_Stage_Change__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Stalled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_SS2__c</fullName>
        <description>For use on DB</description>
        <label>Days at SS2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_SS3__c</fullName>
        <label>Days at SS3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_at_SS4__c</fullName>
        <label>Days at SS4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Tracker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deal Tracker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Default Contact)</relationshipLabel>
        <relationshipName>Opportunities_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Id__c</fullName>
        <description>NS internal id for departments</description>
        <label>Department Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department information</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate</fullName>
                    <default>true</default>
                    <label>Corporate</label>
                </value>
                <value>
                    <fullName>Advisory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Designated_ARR__c</fullName>
        <label>Updated ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Digital_Medium__c</fullName>
        <label>Digital Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Source__c</fullName>
        <label>Digital Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounts_over_10_Count__c</fullName>
        <description>Used in Approval Process</description>
        <label>Discounts over 10% Count</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Discount</field>
            <operation>greaterThan</operation>
            <value>10</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>EL_Compliance_Status__c</fullName>
        <inlineHelpText>EL must be sent to Compliance and approved before to sending to the client.</inlineHelpText>
        <label>EL Compliance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_REA__c</fullName>
        <label>EUR REA</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_REIT__c</fullName>
        <label>EUR REIT</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engagement_Size__c</fullName>
        <description>Advisory Deal Size for the Referred By User to see in reports</description>
        <formula>IF(Amount &lt;= 200000,&quot;Small&quot;, 
IF(Amount &lt;= 400000,&quot;Medium&quot;, 
IF(Amount &gt; 400000,&quot;Large&quot;, 
&quot;N/A&quot;)))</formula>
        <label>Engagement Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evergreen_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evergreen Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evergreen_Increase__c</fullName>
        <label>Evergreen % Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Deal_Scoring_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from Deal Scoring Model</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Favor_End_Date__c</fullName>
        <label>Favor End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Further_Interest__c</fullName>
        <inlineHelpText>Other Products they are interested in, but not yet receiving.</inlineHelpText>
        <label>Further Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Interests_Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GSA_Subsidairy__c</fullName>
        <description>Used for routing on-boarding and compliance alert</description>
        <formula>Text(Account.Subsidiary__c)</formula>
        <label>GSA Subsidairy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geographic_Exposure__c</fullName>
        <label>Geographic Exposure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Geographies</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HVT_Increase_Unmet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HVT Increase Unmet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_Value_Target__c</fullName>
        <label>High Value Target %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ID_Request__c</fullName>
        <label>ID Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inbound?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Asking_Price__c</fullName>
        <inlineHelpText>The first price (ARR) proposed to the client for final product offering</inlineHelpText>
        <label>Initial Asking Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Interaction_Level_NS_Internal_Id__c</fullName>
        <formula>CASE( Interaction_Level__c , &apos;Low Touch&apos;, 2, &apos;High Touch&apos;, 1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interaction Level NS Internal Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interaction_Level__c</fullName>
        <label>Interaction Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Touch</fullName>
                </value>
                <value>
                    <fullName>Low Touch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <formula>(&quot;Green Street Advisors research from&quot;)&amp;&quot; &quot;&amp;Text(Contract_Start_Date__c)&amp;&quot; &quot;&amp;(&quot;through&quot;)&amp;&quot; &quot;&amp;Text(Contract_End_Date__c)&amp;&quot; &quot;&amp;(&quot;. To be billed on a&quot;)&amp;&quot; &quot;&amp; Billing_Cadence_for_Invoice__c&amp;&quot; &quot;&amp;(&quot;basis.&quot;)</formula>
        <label>Invoice Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Public__c</fullName>
        <label>Is Public?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__Is_Influenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
        <label>Is_Influenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__My_DateTime__c</fullName>
        <label>My DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LID__My_Geolocation__c</fullName>
        <label>My Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LID__OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LID__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change__c</fullName>
        <description>Date populated by Workflow to show when the stage was last changed, so you  can pull it into the account related list and use on reports to show stalled opportunities.</description>
        <label>Last Stage Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <label>Lead Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Former User</fullName>
                </value>
                <value>
                    <fullName>Former Account</fullName>
                </value>
                <value>
                    <fullName>Cold Outreach</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Target List</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Inquiry</fullName>
                </value>
                <value>
                    <fullName>Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Paid Ads</fullName>
                </value>
                <value>
                    <fullName>Derived Intent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Classification__c</fullName>
        <formula>CASE(LeadSource,
&quot;Inquiry&quot;, &quot;Hot&quot;,
&quot;Referral&quot;, &quot;Hot&quot;,
&quot;AM Referral&quot;, &quot;Hot&quot;,
&quot;Demo Request&quot;, &quot;Hot&quot;,
&quot;Snowflake&quot;, &quot;Hot&quot;,
&quot;React &amp; US News Ecomm Inquiries&quot;, &quot;Hot&quot;,
&quot;Referral: Past Client Introduction&quot;, &quot;Hot&quot;,
IF(ISPICKVAL(LeadSource, &quot;&quot;) , &apos;&apos;, &quot;Warm&quot;))</formula>
        <inlineHelpText>Classification based on the lead source.</inlineHelpText>
        <label>Lead Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Lead Contact)</relationshipLabel>
        <relationshipName>LeadContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Channel__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Demo Request</fullName>
                </value>
                <value>
                    <fullName>Contact Us</fullName>
                </value>
                <value>
                    <fullName>Direct Call</fullName>
                </value>
                <value>
                    <fullName>Inbound Email</fullName>
                </value>
                <value>
                    <fullName>Trial Request</fullName>
                </value>
                <value>
                    <fullName>Subscription Request</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>In Person Event</fullName>
                </value>
                <value>
                    <fullName>Sponsored Event</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Content Request</fullName>
                </value>
                <value>
                    <fullName>Scored Lead</fullName>
                </value>
                <value>
                    <fullName>ZoomInfo</fullName>
                </value>
                <value>
                    <fullName>Linkedin Sales Nav</fullName>
                </value>
                <value>
                    <fullName>Self-Reported</fullName>
                </value>
                <value>
                    <fullName>PERE</fullName>
                </value>
                <value>
                    <fullName>Green Street</fullName>
                </value>
                <value>
                    <fullName>React</fullName>
                </value>
                <value>
                    <fullName>LDC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Network</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Target List</fullName>
                </value>
                <value>
                    <fullName>Non-Green Street Sponsored Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Length_of_Contract__c</fullName>
        <description>Contract Length in Years</description>
        <formula>(Contract_End_Date__c - Contract_Start_Date__c) / 365</formula>
        <label>Length of Contract</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Size__c</fullName>
        <label>License Size</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ML8</fullName>
                </value>
                <value>
                    <fullName>ML2</fullName>
                </value>
                <value>
                    <fullName>ML25</fullName>
                </value>
                <value>
                    <fullName>NULL</fullName>
                </value>
                <value>
                    <fullName>ML4</fullName>
                </value>
                <value>
                    <fullName>ML12</fullName>
                </value>
                <value>
                    <fullName>ML5</fullName>
                </value>
                <value>
                    <fullName>MU</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2-3</fullName>
                </value>
                <value>
                    <fullName>4-5</fullName>
                </value>
                <value>
                    <fullName>6-10</fullName>
                </value>
                <value>
                    <fullName>11-20</fullName>
                </value>
                <value>
                    <fullName>21-50</fullName>
                </value>
                <value>
                    <fullName>51-100</fullName>
                </value>
                <value>
                    <fullName>101-200</fullName>
                </value>
                <value>
                    <fullName>201-500</fullName>
                </value>
                <value>
                    <fullName>500+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <inlineHelpText>React License Type</inlineHelpText>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Multi-National</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Related to the address of the client (not the sales team)</description>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EU</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>APac</fullName>
                </value>
                <value>
                    <fullName>RoW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interest - check back later</fullName>
                </value>
                <value>
                    <fullName>Advisory involvement</fullName>
                </value>
                <value>
                    <fullName>No interest</fullName>
                </value>
                <value>
                    <fullName>Missing feature/data</fullName>
                </value>
                <value>
                    <fullName>Non-coverage</fullName>
                </value>
                <value>
                    <fullName>No budget</fullName>
                </value>
                <value>
                    <fullName>Out of price range</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Stayed with current Vendor</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t buy research</fullName>
                </value>
                <value>
                    <fullName>Non-responsive</fullName>
                </value>
                <value>
                    <fullName>No Legitimate Interest</fullName>
                </value>
                <value>
                    <fullName>Fit</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Needs Change</fullName>
                </value>
                <value>
                    <fullName>Favor Access Expired</fullName>
                </value>
                <value>
                    <fullName>Market Conditions</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>New Research Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Made_Active_By__c</fullName>
        <description>User who created the Opportunity in CDB or person who created in Salesforce if after initial import</description>
        <inlineHelpText>User who created the Opportunity in CDB or Salesforce</inlineHelpText>
        <label>Made Active By</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Focus__c</fullName>
        <inlineHelpText>What Markets are they focused on?</inlineHelpText>
        <label>Market Focus</label>
        <type>TextArea</type>
    </fields>
</CustomObject>